Updated Login Front-end

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,6 +12,10 @@
     justify-content: end;
 }
 
+.user-name{
+    color: #eee;
+}
+
 #canvas-container{
     display: flex;
     justify-content: center;
