--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,3 @@
-
-
 #users-table_filter,
 #diaries-table_filter,
 #approval-requests-table_filter{
@@ -150,4 +148,43 @@
 
 #qr-code img{
     margin-left: 30px;
+}
+
+.validity-table{
+    font-size: .6em;
+    transform: rotate(-90deg);
+    position: absolute;
+    top: 90%;
+    width: 115mm;
+    transform-origin: 0 0;
+}
+
+.back-side-blurb{
+    font-size: .7em;
+}
+
+.back-side-footer{
+    background: #ff914d;
+    font-size: .7em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+#director-name{
+    font-size: 1.2em;
+}
+
+#students-table_length,
+#students-table_filter{
+    display: inline-block;
+    width: 50%;
+}
+
+#students-table_filter{
+    text-align: right;
+}
+
+#students-table_filter label input{
+    margin-left: 15px;
 }
